--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.1"
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-utils": "^1.4.2"
   }
 }
